mule-user-guide/v/3.4/component-configuration-reference.adoc
= 组件配置参考

此页面提供有关为组件配置的元素的详细信息。这些信息直接从`mule.xsd`中提取并被缓存。有关组件的更多信息，请参阅 link:/mule-user-guide/v/3.4/configuring-components[配置组件]。

== 元器件

一个简单的POJO（Plain Old Java Object）组件，当收到消息时它将被Mule调用。要使用的类或对象实例可以使用子对象工厂元素或通过'class'属性指定。如果使用'class'属性，则不能配置对象工厂。使用'class'属性等同于使用propotype对象工厂（\\'prototype-object'子元素）。

。<component...>的属性
[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
|类 |类名 |否 |   |指定组件类。这是一个等同于提供\'原型对象'元素的快捷方式。
|===

。<component...>的子元素
[%header%autowidth.spread]
|===
| {名称{1}}基数 |说明
|抽象拦截器 | 0..1  |一个拦截器元素的占位符。
|拦截器堆栈 | 0..1  |对全局定义的一系列intrceptors的引用。
|抽象对象工厂 | 0..1  |对象工厂用于获取将用于组件实现的对象实例。对象工厂负责创建对象，并可能实现不同的模式，如单例或原型，或从其他对象容器中查找实例。
|抽象生命周期适配器工厂 | 0..1  | 
|绑定 | 0 .. *  |绑定将Mule端点与注入的Java接口相关联。这就像使用Spring来注入一个bean，但不是调用bean上的方法，而是将消息发送到端点。
|抽象入口点解析器集合 | 0..1  |入口点解析器集合元素的占位符。这些组合了一组入口点解析器，依次尝试它们直到成功。
|抽象入口点解析器 | 0..1  |入口点解析器元素的占位符。入口点解析器通过选择要调用的方法来定义如何将有效载荷传递给Java代码。
|===

== 联合组件

一个POJO（Plain Old Java Object）组件，当收到消息时将由Mule调用。该实例可以通过工厂或类来指定。

。<pooled-component...>的属性
[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
|类 |类名 |否 |   |指定组件类。这是一个相当于提供\'原型对象'元素的捷径。
|===

。<pooled-component...>的子元素
[%header%autowidth.spread]
|===
| {名称{1}}基数 |说明
|抽象拦截器 | 0..1  |一个拦截器元素的占位符。
|拦截器堆栈 | 0..1  |对全局定义的一系列intrceptors的引用。
|抽象对象工厂 | 0..1  |对象工厂用于获取将用于组件实现的对象实例。对象工厂负责创建对象，并可能实现不同的模式，如单例或原型，或从其他对象容器中查找实例。
|抽象生命周期适配器工厂 | 0..1  | 
|绑定 | 0 .. *  |绑定将Mule端点与注入的Java接口相关联。这就像使用Spring来注入一个bean，但不是调用bean上的方法，而是将消息发送到端点。
|抽象入口点解析器集合 | 0..1  |入口点解析器集合元素的占位符。这些组合了一组入口点解析器，依次尝试它们直到成功。
|抽象入口点解析器 | 0..1  |入口点解析器元素的占位符。入口点解析器通过选择要调用的方法来定义如何将有效载荷传递给Java代码。
| abstract-pooling-profile  | 0..1  |对象池的特征。
|===

== 共享资料

。<pooling-profile...>的属性
[%header%autowidth.spread]
|=====
| {名称{1}}输入 |必 |缺省 |说明
| maxActive  |字符串 |否 |   |控制一次可从会话借用的最大Mule组件数量。设置为负值时，一次可能有效的组件数量不受限制。当超过maxActive时，泳池据说耗尽。
| maxIdle  |字符串 |否 |   |随时控制池中闲置的最大数量的Mule组件。当设置为负值时，一次可能闲置的Mule组件数量没有限制。
|初始化策略 |枚举 |否 | INITIALISE_ONE  |确定应如何初始化池中的组件。可能的值有：INITIALISE_NONE（不会在启动时将任何组件加载到池中），INITIALISE_ONE（将在启动时将一个初始组件加载到池中）或INITIALISE_ALL（将在启动时加载池中的所有组件）
| exhaustedAction  |枚举 |否 | WHEN_EXHAUSTED_GROW  |指定池耗尽时Mule组件池的行为。可能的值是："WHEN_EXHAUSTED_FAIL"，它将引发一个NoSuchElementException "WHEN_EXHAUSTED_WAIT"，它将通过调用Object.wait（long）直到新的或空闲的对象可用或WHEN_EXHAUSTED_GROW阻塞，这将创建一个新的骡实例并返回它，实质上使maxActive毫无意义。如果提供了正的maxWait值，它将至多阻塞几毫秒，之后会抛出NoSuchElementException。如果maxThreadWait是负值，它将无限期阻止。
| maxWait  |字符串 |否 |   |指定在池耗尽时等待池组件可用的毫秒数，并且exhaustedAction设置为WHEN_EXHAUSTED_WAIT。
| evictionCheckIntervalMillis  |字符串 |否 |   |指定对象逐出器运行之间的毫秒数。如果不是肯定的，则不会执行任何对象清除程序。
| minEvictionMillis  |字符串 |否 |   |确定对象在符合驱逐条件之前可以在池中闲置的最少时间。如果是非积极的，由于空闲时间的原因，任何物体都不会从池中被驱逐。
|=====

。<pooling-profile...>的子元素
[%header%autowidth.spread]
|===
| {名称{1}}基数 |说明
|===

== 回声组件

记录消息并作为结果返回有效负载。

。<echo-component...>的属性
[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
|===

。<echo-component...>的子元素
[%header%autowidth.spread]
|===
| {名称{1}}基数 |说明
|抽象拦截器 | 0..1  |一个拦截器元素的占位符。
|拦截器堆栈 | 0..1  |对全局定义的一系列intrceptors的引用。
|===

== 日志组件

记录消息内容（或内容长度，如果它是一个大消息）。

。<log-component...>的属性
[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
|===

。<log-component...>的子元素
[%header%autowidth.spread]
|===
| {名称{1}}基数 |说明
|抽象拦截器 | 0..1  |一个拦截器元素的占位符。
|拦截器堆栈 | 0..1  |对全局定义的一系列intrceptors的引用。
|===

== 空组件

如果收到消息则引发异常。

。<null-component...>的属性
[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
|===

。<null-component...>的子元素
[%header%autowidth.spread]
|===
| {名称{1}}基数 |说明
|抽象拦截器 | 0..1  |一个拦截器元素的占位符。
|拦截器堆栈 | 0..1  |对全局定义的一系列intrceptors的引用。
|===

==  Spring对象

。<spring-object...>的属性

[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
| bean  |名称（无空格） |否 |   |查看Spring bean的名称。
|===

。<spring-object...>的子元素
[%header%autowidth.spread]
|====
| {名称{1}}基数 |说明
|属性 | 0 .. *  |设置一个Mule属性。这是可以在组件，服务等上设置的名称/值对，它提供了配置系统的通用方法。通常情况下，您不需要像这样使用泛型属性，因为几乎所有的功能都是通过专用元素公开的。但是，它可以用于配置隐蔽或忽略的选项以及从通用端点元素配置传输。
|属性 | 0..1  | Mule属性的映射。
|====

== 单例对象

。<singleton-object...>的属性
[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
|类 |类名 |否 |   |类名
|===

。<singleton-object...>的子元素
[%header%autowidth.spread]
|====
| {名称{1}}基数 |说明
|属性 | 0 .. *  |设置一个Mule属性。这是可以在组件，服务等上设置的名称/值对，它提供了配置系统的通用方法。通常情况下，您不需要像这样使用泛型属性，因为几乎所有的功能都是通过专用元素公开的。但是，它可以用于配置隐蔽或忽略的选项以及从通用端点元素配置传输。
|属性 | 0..1  | Mule属性的映射。
|====

== 原型对象

。<prototype-object...>的属性

[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
|类 |类名 |否 |   |类名
|===

。<prototype-object...>的子元素

[%header%autowidth.spread]
|====
| {名称{1}}基数 |说明
|属性 | 0 .. *  |设置一个Mule属性。这是可以在组件，服务等上设置的名称/值对，它提供了配置系统的通用方法。通常情况下，您不需要像这样使用泛型属性，因为几乎所有的功能都是通过专用元素公开的。但是，它可以用于配置隐蔽或忽略的选项以及从通用端点元素配置传输。
|属性 | 0..1  | Mule属性的映射。
|====

== 自定义生命周期适配器工厂

。<custom-lifecycle-adapter-factory...>的属性
[%header%autowidth.spread]
|=====
| {名称{1}}输入 |必 |缺省 |说明
|类 |类名 |是 |   | LifecycleAdapter接口的实现。
|=====

。<custom-lifecycle-adapter-factory...>的子元素
[%header%autowidth.spread]
|====
| {名称{1}}基数 |说明
| spring：property  | 0 .. *  |自定义配置的Spring样式属性元素。
|====

== 绑定

绑定将Mule端点与注入的Java接口相关联。这就像使用Spring来注入一个bean，但不是调用bean上的方法，而是将消息发送到端点。

。<binding...>的属性
[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
|接口 |类名 |是 |   |要注入的接口。将通过呼叫端点来创建代理来实现此接口。
|方法 |   |否 |   |应该使用的接口上的方法。如果接口只有一个方法，这可以省略。
|===

。<binding...>的子元素
[%header%autowidth.spread]
|===
| {名称{1}}基数 |说明
| abstract-outbound-endpoint  | 1 .. *  |出站端点元素的占位符。出站端点将消息分派到底层传输。
|===

== 拦截

见 link:/mule-user-guide/v/3.4/using-interceptors[使用拦截器]。

== 入口点解析器

见 link:/mule-user-guide/v/3.4/entry-point-resolver-configuration-reference[入口点解析器配置参考]。
